# AI-Powered-Study-Tools

./: .env.example  .gitignore  README.md  inputs.json  pyproject.toml  requirements.txt  run_batch.py
0-audio-transcriber/: transcribe_audio.py
1-video-transcriber/: transcribe_video.py
2-real-time-transcriber/: real_time_transcription.py
3-note-generator/: extract_lecture_frames.py  generate_notes.py  generate_notes_sinhala.py  html_comparison_viewer.py  pdf_notes_generator.py  research_paper_notes_generator.py  translate_sinhala_html.py  translate_sinhala_md.py
4-video-silence-remover/: remove_silence.py
5-lecture-subtitle-generator/: generate_subtitles.py
5-pdf-page-splitter/: split_pdf.py
sample_data/: note.html  transcription.txt
